fix overflow scroll

--- a/docs/_sass/_style.scss
+++ b/docs/_sass/_style.scss
@@ -69,6 +69,7 @@ article {
 
     /* Shadow */
     &:after, &:before{
+        display: none;
         z-index: 1;
         content: "";
         height: 100%;        
